--- a/backend/src/main/resources/templates/verifyEmail.html
+++ b/backend/src/main/resources/templates/verifyEmail.html
@@ -14,12 +14,12 @@
       </div>
       <div id="em-description" style="padding-top: 15px;max-width: 375px;margin-left: auto;margin-right: auto;line-height: 28px;">
         <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">
-          <p>find below a link to verify your email address to the extended mind service.</p>
-          <p>if you have not registered as a user to extended mind, please let us know by replying to this email.</p>
+          <p>find below a link to verify your email address to the extended mind service</p>
+          <p>if you have not registered as a user to extended mind, please let us know by replying to this email</p>
         </h2>
       </div>
       <div id="em-button" style="padding-top: 70px;">
-        <a href="verifyEmailLink" style="text-decoration: none;color: white;"><div id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;font-size: 15px;"><span style="word-wrap: break-word; -ms-word-break: break-all; word-break: break-all; word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; -ms-hyphens: auto; hyphens: auto;">click here to verify your email</span></div></a>
+        <a href="verifyEmailLink" style="text-decoration: none;color: white;"><div id="em-button-area" style="padding-top: 7px;padding-bottom: 7px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0f82fe;font-size: 25px;font-weight: 700;"><span style="word-wrap: break-word; -ms-word-break: break-all; word-break: break-all; word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; -ms-hyphens: auto; hyphens: auto;">verify email</span></div></a>
       </div>
     </div>
     <div id="em-footer" style="padding-top: 40px;">
