--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -159,8 +159,9 @@ input[type="checkbox"]:checked + label:before {
   transition: opacity @speed-animate-date-active @timing-animate-date-active;         // [1]
 }
 
-// 1. Fade in animating only ng-enter part of ng-if
-.animate-fade-in.ng-enter {
+// 1. Fade in animating only ng-enter part of ng-if, and ng-hide.
+.animate-fade-in.ng-enter,
+.animate-fade-in-out.ng-hide-add, .animate-fade-in-out.ng-hide-remove {
   pointer-events: none;
   -webkit-transition: opacity @speed-animate-fade-in @timing-animate-fade-in;  // [1]
   -moz-transition: opacity @speed-animate-fade-in @timing-animate-fade-in;     // [1]
@@ -169,14 +170,31 @@ input[type="checkbox"]:checked + label:before {
   transition: opacity @speed-animate-fade-in @timing-animate-fade-in;          // [1]
 }
 
-// 1. Fade in
+// 1. Fade in start.
 .animate-fade-in.ng-enter {
   opacity: 0; // [1]
 }
 
-// 1. Fade in
+// 1. Fade in end.
 .animate-fade-in.ng-enter.ng-enter-active {
   opacity: 1; // [1]
+}
+
+// 1. Fade out start.
+.animate-fade-in-out.ng-hide-add {
+  opacity: 1; // [1]
+}
+// 1. Fade out end.
+.animate-fade-in-out.ng-hide-add.ng-hide-add-active {
+  opacity: 0;
+}
+// 1. Fade in start.
+.animate-fade-in-out.ng-hide-remove {
+  opacity: 0;
+}
+// 1. Fade in end.
+.animate-fade-in-out.ng-hide-remove.ng-hide-remove-active {
+  opacity: 1;
 }
 
 @speed-animate-editor-footer-toggle: .3s;
