Started implementing vertical alignment reboot. Refactored .group-mixed.with-checkbox.

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -67,5 +67,6 @@ TODO: Icons are not working yet with Phytoplankton
 
   // needed to align icons vertically middle
   // source: http://www.sitepoint.com/creating-custom-icon-font-icomoon-less/
-  vertical-align: -10%; // FIXME: Needs to be overriden in many places
+  // vertical-align: -10%; // FIXME: Needs to be overriden in many places
+  // vertical-align: middle;
 }
