--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -29,7 +29,12 @@ input, select, textarea {
   background-image: none;
 }
 
+// 1. textarea is a replaced element so "---different browsers set it to different positions."
+//    https://developer.mozilla.org/en-US/docs/Web/HTML/Element/textarea
+//    Some browsers set textarea to display: inline-block by default, which causes incostistent bottom margin,
+//    set display: block by default. See http://stackoverflow.com/a/3454002
 textarea {
+  display: block; // [1]
   min-height: @grid-vertical / 2;
   height: @grid-vertical / 2;
   .break-words();
